--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "cors": "^2.8.5",
+    "express": "^4.21.1",
+    "fs": "^0.0.1-security",
     "moment": "^2.30.1",
     "next": "14.2.13",
+    "path": "^0.12.7",
     "react": "^18",
     "react-big-calendar": "^1.15.0",
     "react-dom": "^18",
