--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "path": "^0.12.7",
     "react": "^18",
     "react-big-calendar": "^1.15.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18",
     "react-modal": "^3.16.1"
   },
